cmake_minimum_required(VERSION 3.13)
project(c_kr C)

set(CMAKE_C_STANDARD 11)

add_executable(1_1_hello_world src/ch1/1_1_hello_world.c)
add_executable(1_1_hello_world_mod src/ch1/1_1_hello_world_mod.c)
add_executable(1_2_fahr_cels src/ch1/1_2_fahr_cels.c)
add_executable(1_1_3_fahr_cels_header src/ch1/1_1_3_fahr_cels_header.c)
add_executable(1_1_4_celc_fahr src/ch1/1_1_4_celc_fahr.c)
add_executable(1_5_1_file_copy_v2 src/ch1/1_5_1_file_copy_v2.c)
add_executable(1_5_fahr_celc src/ch1/1_5_fahr_celc.c)
add_executable(1_6_ex src/ch1/1_6_ex.c)
add_executable(1_7_ex src/ch1/1_7_ex.c)
add_executable(1_5_2_char_count src/ch1/1_5_2_char_count.c)
add_executable(1_5_2_char_count_v2 src/ch1/1_5_2_char_count_v2.c)
add_executable(1_5_3_line_count src/ch1/1_5_3_line_count.c)
add_executable(1_8_ex src/ch1/1_8_ex.c)
add_executable(1_9_ex src/ch1/1_9_ex.c)
add_executable(1_10_ex src/ch1/1_10_ex.c)
add_executable(1_5_4_word_count src/ch1/1_5_4_word_count.c)
add_executable(1_12_ex src/ch1/1_12_ex.c)
add_executable(1_6_ct_array src/ch1/1_6_ct_array.c)
add_executable(1_13_ex src/ch1/1_13_ex.c)
add_executable(1_13_vert_ex src/ch1/1_13_vert_ex.c)
add_executable(1_14_ex src/ch1/1_14_ex.c)
add_executable(1_7_power src/ch1/1_7_power.c)
add_executable(1_15_ex src/ch1/1_15_ex.c)
add_executable(1_9_char_arrays src/ch1/1_9_char_arrays.c)
add_executable(1_16_ex src/ch1/1_16_ex.c)
add_executable(1_17_ex src/ch1/1_17_ex.c)
add_executable(1_18_ex src/ch1/1_18_ex.c)
add_executable(1_19_ex src/ch1/1_19_ex.c)

















